--- a/Gestion de Citas/Gestion de Citas/Pages/Index.cshtml
+++ b/Gestion de Citas/Gestion de Citas/Pages/Index.cshtml
@@ -1,63 +1,54 @@
 ﻿@page
 @model IndexModel
 
-
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Gestion de Citas</title>
-
-    <!-- Enlace al documento css. no aplicable en codepen.
-      <link rel="stylesheet" type="text/css" href="contact-form.css">
-    -->
-
-</head>
-<style>
-
-    nav.navbar {
-        background-color: blue;
-    }
-
-    body {
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .bg-text {
-        text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #fff;
-    }
-
-    
-</style>
-
+<!DOCTYPE html>
+<html>
 <body>
-   <div class="row">
+    <div class="row">
         <div class="col-7">
-            <p>hi</p>
         </div>
-        <div class="d-flex col-5 p-5 justify-content-center" style="background: #0E7A89;height:90vh">
-            <h2>BIENVENIDO</h2>
-                <form class="card p-4 rounded align-items-center">
-                      <div class="container">
+        <div>
+            <figure class="imagen">
+                <img src="https://www.totem.com.mx/wp-content/uploads/2021/04/creatividad.jpg">
+            </figure>
+        </div>-
+        <div class="col-5" style="background: #0E7A89; height: 95vh">
+            <form method='POST'>
+                <center>
+                    </br>
+                    <h2 style="color:#FFFFFF">BIENVENIDO</h2></br>
+                </center>
+                <p>
+                    <center>
+                        <label for="nombre" class="colocar_nombre">
 
-                        <label for="email"><b>Email</b></label>
-                        <input type="text" placeholder="Enter Email" name="email" required>
 
-                        <label for="psw"><b>Password</b></label>
-                        <input type="password" placeholder="Enter Password" name="psw" required>
+                            <span class="obligatorio"></span></br>
+                        </label>
+                        <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Usuario">
+                    </center>
+                </p><br>
+                <p>
+                    <center>
+                        <label for="password" class="colocar_password">
 
-                        <div class="clearfix">
-                          <button type="button" class="cancelbtn">Cancel</button>
-                          <button type="submit" class="signupbtn">Sign Up</button>
-                        </div>
-                      </div>
-                </form>
+                            <span class="obligatorio"></span></br>
+                        </label>
+                        <input type="Password" name="indroducir_password " id="txtPassword" required="obligatorio" placeholder="Password">
+                    </center>
+                </p>
+                <p name="inicio_de_sesion" method="post" action="/Inicio Sesion" mailto:al15760370@ite.edu.mx>
+                    </br>
+                    <!-- Botón de envío de formulario -->
+                    <center>
+                        <input type="submit" value="Acceder" style="background: #EADC60" /></hr>
+                    </center>
+            </form>
+            <p>
+                <center>
+                    Crear Cuenta
+                </center>
+            </p>
         </div>
-    </div>
 </body>
-</html >
+</html>
