--- a/Gestion de Citas/Gestion de Citas/Pages/Index.cshtml
+++ b/Gestion de Citas/Gestion de Citas/Pages/Index.cshtml
@@ -40,6 +40,7 @@
                 <p name="inicio_de_sesion" method="post" action="/Inicio Sesion" mailto:al15760370@ite.edu.mx>
                     </br>
                     <!-- Botón de envío de formulario -->
+                    <!-- Comentario de prueba -->
                     <center>
                         <input type="submit" value="Acceder" style="background: #EADC60" /></hr>
                     </center>
